Moved configuring docker task to installing apps role due to privilege escalation.

--- a/playbooks/roles/installing_apps/tasks/main.yml
+++ b/playbooks/roles/installing_apps/tasks/main.yml
@@ -10,3 +10,6 @@
 - name: Installing applications for Ubuntu
   when: ansible_distribution == "Ubuntu"
   include_tasks: ubuntu_1804.yml
+
+- name: Configuring docker
+  include_tasks: configure_docker.yml
