--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-ansible = "*"
+ansible = ">=2.7.12"
 cryptography = "==2.3"
 pyyaml = "==4.2b1"
+Jinja2 = ">=2.10.1"
 
 [dev-packages]
 
